--- a/trackiffy/pom.xml
+++ b/trackiffy/pom.xml
@@ -18,6 +18,13 @@
 	</properties>
 	<dependencies>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<version>3.0.5</version>
+		</dependency>
+
+
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
