successful integrating sql and inserting values

--- a/trackiffy/src/main/resources/application.properties
+++ b/trackiffy/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
 logging.level.root=INFO
+
+spring.datasource.url=jdbc:mysql://localhost:3306/trackiffy?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&rewriteBatchedStatements=true
+spring.datasource.username=root
+spring.datasource.password=loginrahul
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Drop and recreate the database schema on startup
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+spring.thymeleaf.check-template-location=false
