--- a/trackiffy/src/main/resources/application.properties
+++ b/trackiffy/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=loginrahul
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Drop and recreate the database schema on startup
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -17,3 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 spring.thymeleaf.check-template-location=false
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
