--- a/trackiffy/pom.xml
+++ b/trackiffy/pom.xml
@@ -18,6 +18,13 @@
 	</properties>
 	<dependencies>
 
+	<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>4.0.1</version>
+    <scope>provided</scope>
+</dependency>
+
 
 
 	<dependency>
@@ -52,7 +59,13 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>3.0.5</version>
 		</dependency>
+		
 
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>6.0.2</version>
+</dependency>
 
 		
 		<dependency>
